Get Docker image build working